--- a/src/app/components/users/user-edit-form/user-edit-form.component.scss
+++ b/src/app/components/users/user-edit-form/user-edit-form.component.scss
@@ -1,46 +1,110 @@
-.form {
-    &__container {
-        padding: 40px;
-        background: #7b3fe1;
-        width: 400px;
-        margin: 0 auto;
-        transform: translateY(100px);
-        color: rgba(255, 255, 255, 0.8);
-        border-radius: 10px;
-        .form {
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
 
-            mat-form-field {
-                input:-webkit-autofill {
-                    -webkit-box-shadow: 0 0 0 1000px #7b3fe1 inset !important;
-                    -webkit-text-fill-color: rgba(255, 255, 255, 0.8) !important;
-                }
-                .mat-icon {
-                    padding-right: 10px;
-                }
-            }
 
-            &__btn {
-                margin: 20px 0px;
-                background: #1f2329;
-            }
+.profile{
+    margin: 0;
+    padding: 0;
+    min-height: 100%;
+    background: linear-gradient(to bottom right, #1f2329, 80%, rgb(94, 166, 233));
+    font-family: Inter, sans-serif;
+    color: #fff;
 
-            &__link {
-                text-align: center;
-            }
+    h1{
+        padding-top: 5rem;
+        margin-top: 0;
+        text-align: center;
+
+        .userName {
+            color: #3884ff;
         }
     }
 
-    &__title {
-        color: inherit;
+    .manage {
         text-align: center;
-        font-weight: normal;
+        display: flex;
+        width: 70%;
+        margin-left: 12%;
     }
+    
+  
+  
+.info
+{
+    display: flex;
+   flex-direction: column;
+   width: 60%;
+   background-color:#181c1f;
+   color: #fff;
+   border-radius: 7px;
+   text-align: left;
+   margin-top: 5rem;
+   margin-bottom: 5rem;
+   margin-left: 18%;
+   border-color: #3884ff;
+   border-width: 2px;
+   border-style: solid;
+
+   .section {
+       background-color: #1d2025;
+       border-radius: 7px;
+       text-align: center;
+       display: block;
+       border-color: #3884ff;
+       border-width: 2px;
+       border-style: solid;
+       
+   }
+
+ 
+
+   .title {
+       margin: 0.5rem;
+       padding: 1rem;
+       font-weight: 500;
+       text-align: center;
+       color: grey;
+       
+       
+   }
+   .user-info {
+       margin: 0.5rem;
+       margin-left: 5%;
+       color: #fff;
+       padding-bottom: 1rem;
+       font-weight: 800;
+   }
+
+   .edit {
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+   padding-bottom: 1rem;
+
+   .outlined-btn {
+    border: 2px solid #3884ff;
+    border-radius: 6px;
+    background-color: transparent;
+    color: #fff;
+    font-weight: 700;
+    text-align: center;
+    letter-spacing: .4px;
+    text-decoration: none;
+    padding-left: 3rem;
+    padding-right: 3rem;
 }
-.page {
-    min-width: 100vw;
-    min-height: 100vh;
-    background: #1f2329;
+
+#block {
+    border-color: red;
+}
+   }
+   
+
+}
+
+#info-block {
+    border-color: red; 
+ }
+
+ #section-block {
+    border-color: red; 
+ }
 }
