--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -8,39 +8,63 @@
   <div class="section_content">
     <div class="container_main container ">
       <div class="list_div">
+        <div>
+          <ul class="list">
+            <li><a href=""
+            >All posts</a></li>
+          </ul>
+        </div>
         <div *ngFor="let post of postCategories">
           <ul class="list">
-            <li><a
-              [routerLink]="['']"
-              (click)="getQueryFromCategory(post.name)">
-              {{post.name}}</a></li>
+            <li id="cb1">
+              <a type="checkbox"
+                [routerLink]="['']"
+                (click)="getQueryFromCategory(post.name); getSubCategory(post)">
+                {{post.name}}</a>
+            </li>
           </ul>
+          <div *ngIf="info && categoryInfo.id === post.id">
+            <ng-container *ngFor="let subCategory of post.subCategories">
+              <ul class="sub-ul">
+                <li class="sub-li" id="cb2">
+                  <a [routerLink]="['']"
+                     (click)="getQueryFromCategory(subCategory.name)">
+                    {{subCategory.name}}
+                  </a>
+                </li>
+              </ul>
+            </ng-container>
+          </div>
         </div>
       </div>
       <div class="posts-container">
         <div class="main-posts">
-            <div *ngFor="let post of allPosts" class="example">
-              <mat-card class="example-card">
-                <mat-card-title-group style="flex-direction: column">
-                  <mat-card-title>{{post.title}}
-                    <div style="float: right" *ngIf="!hidenButton">
-                      <button style="background: transparent; border: 0; cursor: pointer"
-                              [hidden]="!isSuperAdmin && !isAdmin"
-                              (click)="editPostForAdmin(post.id)">
-                        <mat-icon color="accent">edit</mat-icon>
-                      </button>
-                      <button style="background: transparent; border: 0; cursor: pointer"
-                              [hidden]="!isSuperAdmin && !isAdmin">
-                        <mat-icon color="warn">delete_outline</mat-icon>
-                      </button>
-                    </div>
-                  </mat-card-title>
-                  <mat-card-subtitle class="desc">{{post.category}} </mat-card-subtitle>
-                </mat-card-title-group>
-                <mat-card-content [innerHTML]="post.content">
-                </mat-card-content>
-              </mat-card>
-            </div>
+
+          <div class="wrapper_empty_posts" *ngIf="!(allPosts.length > 0)">
+            <h1>No posts in this category</h1>
+          </div>
+          <div *ngFor="let post of allPosts" class="example">
+            <mat-card class="example-card">
+              <mat-card-title-group style="flex-direction: column">
+                <mat-card-title>{{post.title}}
+                  <div style="float: right" *ngIf="!hidenButton">
+                    <button style="background: transparent; border: 0; cursor: pointer"
+                            [hidden]="!isSuperAdmin && !isAdmin"
+                            (click)="editPostForAdmin(post.id)">
+                      <mat-icon color="accent">edit</mat-icon>
+                    </button>
+                    <button style="background: transparent; border: 0; cursor: pointer"
+                            [hidden]="!isSuperAdmin && !isAdmin">
+                      <mat-icon color="warn">delete_outline</mat-icon>
+                    </button>
+                  </div>
+                </mat-card-title>
+                <mat-card-subtitle class="desc">{{post.category}} </mat-card-subtitle>
+              </mat-card-title-group>
+              <mat-card-content [innerHTML]="post.content">
+              </mat-card-content>
+            </mat-card>
+          </div>
         </div>
       </div>
     </div>
