--- a/src/app/components/main-page/main-page.scss
+++ b/src/app/components/main-page/main-page.scss
@@ -1,3 +1,13 @@
+$avatar-size: 32px;
+$body-background: #353535;
+@font-face {
+  font-family: "ubuntu";
+  font-style: italic;
+  font-weight: 300;
+  src: local("Lato Light Italic"), local("Lato-LightItalic"),
+  url(https://fonts.gstatic.com/s/ubuntucondensed/v8/u-4k0rCzjgs5J7oXnJcM_0kACGMtT-Dfqw.woff2)
+  format("woff2");
+}
 * {
   box-sizing: border-box;
 
@@ -78,6 +88,17 @@ li {
   border-radius: 8px;
   transition: .2s;
 }
+.sub-li::before {
+    content: '▶';
+    position: absolute;
+    left: 15px;
+    color: honeydew;
+  }
+.sub-ul {
+  position: relative;
+  list-style: none;
+  margin-left: 20px;
+}
 
 a {
   background-color: transparent;
@@ -92,15 +113,9 @@ a {
   min-width: 450px;
   max-width: 450px;
   height: 100%;
-  min-height: 200px;
-  max-height: 200px;
+  min-height: 209px;
+  max-height: 209px;
   overflow: hidden;
-}
-
-.example-card:active {
-  overflow: visible;
-  max-height: 100%;
-  cursor: none;
 }
 
 .example {
@@ -204,6 +219,32 @@ mat-card-subtitle, mat-card-content {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+/////// Text for empty CATEGORY
+.wrapper_empty_posts {
+  text-align: center;
+  h1 {
+    color: #fff;
+    font-size: 19px;
+    font-weight: 700;
+    font-family: "Josefin Sans", sans-serif;
+    background: linear-gradient(to right, #673ab7 10%, #25abe8 50%, #d757d3 60%);
+    background-size: 200% auto;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: textclip 1.5s linear infinite;
+    display: inline-block;
+  }
+}
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+////////////
+
+/////////Collapse Menu
+
+  /////////////
 
 @media (max-width: 1290px) {
   .main-posts {
