added the ability to open, edit and delete posts from the main page

--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -20,24 +20,25 @@
       <div class="posts-container">
         <div class="main-posts">
             <div *ngFor="let post of allPosts" class="example">
-              <mat-card class="example-card" [routerLink]="['/post', post.id]">
+              <mat-card class="example-card">
                 <mat-card-title-group style="flex-direction: column">
                   <mat-card-title>{{post.title}}
                     <div style="float: right" *ngIf="!hidenButton">
-                      <button style="background: transparent; border: 0; cursor: pointer"
+                      <button style="background: transparent; border: 0; cursor: pointer; z-index: 3;"
                               [hidden]="!isSuperAdmin && !isAdmin"
-                              (click)="editPostForAdmin(post.id)">
+                              (click)="editPostForAdmin(post)">
                         <mat-icon color="accent">edit</mat-icon>
                       </button>
-                      <button style="background: transparent; border: 0; cursor: pointer"
-                              [hidden]="!isSuperAdmin && !isAdmin">
+                      <button style="background: transparent; border: 0; cursor: pointer; z-index: 3;"
+                              [hidden]="!isSuperAdmin && !isAdmin"
+                              (click)="deletePostForAdmin(post.id)">
                         <mat-icon color="warn">delete_outline</mat-icon>
                       </button>
                     </div>
                   </mat-card-title>
                   <mat-card-subtitle class="desc">{{post.category}} </mat-card-subtitle>
                 </mat-card-title-group>
-                <mat-card-content [innerHTML]="post.content">
+                <mat-card-content [innerHTML]="post.content" [routerLink]="['/post', post.id]">
                 </mat-card-content>
               </mat-card>
             </div>
