--- a/src/app/components/post/user-posts/user-posts.component.scss
+++ b/src/app/components/post/user-posts/user-posts.component.scss
@@ -1,14 +1,11 @@
-.container {
+.container{
     display: flex;
     min-height: 100vh;
 }
 
 .navigation-group {
     flex-basis: 25%;
-    // dark theme
     background-color: #14171c;
-    // light theme
-    // background-color: rgb(243, 245, 246);
     padding-left: 24px;
     padding-top: 16px;
     padding-bottom: 16px;
@@ -34,7 +31,7 @@
             overflow: hidden;
             display: flex;
             align-items: center;
-            .menu-icon-container{
+            .menu-icon-container {
                 margin-bottom: -8px;
                 margin-right: 10px;
             }
@@ -83,8 +80,7 @@
         justify-content: flex-start;
         background-color: inherit;
         &:hover {
-            background-color:rgb(54 60 65);
-            // background-color: rgb(220, 226, 237);
+            background-color: rgb(54 60 65);
         }
         span {
             display: inline-block;
@@ -118,40 +114,35 @@
         flex-basis: 0%;
         cursor: pointer;
         background-color: rgb(24, 28, 31);
-        // background-color: rgb(255, 255, 255);
         padding: 14px;
-        // border-color: rgb(227, 232, 237);
         border-color: rgb(43, 46, 57);
         border-radius: 4px;
         border-width: 1px;
         color: rgb(162, 169, 185);
-        // color: rgb(59, 69, 78);
         line-height: 24px;
         font-size: 16px;
         font-weight: 500;
         font-family: "Open Sans", sans-serif;
         position: relative;
         &:hover {
-            // color: rgb(113, 153, 230);
-            // border-color: rgb(113, 153, 230);
-            color:  rgb(52, 109, 219);
-            border-color:  rgb(52, 109, 219);
+            color: rgb(52, 109, 219);
+            border-color: rgb(52, 109, 219);
         }
     }
-    .btn-prev{
+    .btn-prev {
         margin-right: 6px;
     }
-    .btn-prev__icon{
-        position:absolute;
-        top:16px;
+    .btn-prev__icon {
+        position: absolute;
+        top: 16px;
         left: 10px;
     }
-    .btn-next{
+    .btn-next {
         margin-left: 6px;
     }
-    .btn-next__icon{
-        position:absolute;
-        top:16px;
+    .btn-next__icon {
+        position: absolute;
+        top: 16px;
         right: 10px;
     }
 }
@@ -168,5 +159,49 @@
     }
     span {
         color: white;
+    }
+}
+
+.no-posts {
+    flex: 1 1 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #14171c;
+    padding: 90px;
+    &-title {
+        display: block;
+        font-size: 30px;
+        font-weight: bold;
+        line-height: 36px;
+        color: rgb(234, 242, 247);
+    }
+    &-btn{
+        width: 100%;
+        cursor: pointer;
+        padding: 14px;
+        border-radius: 4px;
+        border-width: 1px;
+        line-height: 24px;
+        font-size: 16px;
+        font-weight: 500;
+        margin-bottom: 8px;
+        font-family: "Open Sans", sans-serif;
+        position: relative;
+        box-shadow: rgb(0 0 0 / 69%) 0px 1px 2px;
+        background-color: rgb(24, 28, 31);
+        border-color: rgb(43, 46, 57);
+        color: rgb(162, 169, 185);
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        span{
+            display: inline-block;
+            margin-left: 10px;
+        }
+        &:hover {
+            color: rgb(52, 109, 219);
+            border-color: rgb(52, 109, 219);
+        }
     }
 }
