--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 @import "./assets/fonts/fonts.css";
 
@@ -16,7 +15,8 @@ $background: #1f2329;
 $pink-font: #da42b1 #000 #000;
 
 ::-webkit-scrollbar {
-    width: 9px;
+    width: 10px;
+    height: 10px;
     background-color: #15181e;
 }
 
