added the ability to add a post from the main component

--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -46,8 +46,13 @@
       </div>
     </div>
   </div>
-  <div class="modal-footer container">
+  <!-- <div class="modal-footer container">
     <div><h4 style="color: #fff; margin-right: 15px"> All right reserved by </h4></div>
     <div><h4 class="footer">InventorWiki</h4></div>
+  </div> -->
+  <div class="mat-fab-container">
+    <button mat-fab class="dialog-btn" color="primary" (click)="addPost()">
+      <mat-icon>add</mat-icon>
+    </button>
   </div>
 </div>
