--- a/src/app/components/post/post-form-dialog/post-form-dialog.component.scss
+++ b/src/app/components/post/post-form-dialog/post-form-dialog.component.scss
@@ -1,3 +1,5 @@
+@import '../post-form/ngx-editor';
+
 .container {
     display: flex;
     flex-direction: column;
@@ -81,81 +83,6 @@
 
 .mat-divider {
     margin: 10px 0px;
-}
-
-::ng-deep {
-    .mat-dialog-container {
-        overflow: hidden;
-        background-color: rgb(24 28 31);
-    }
-    .mat-menu {
-        background-color: rgb(45, 50, 58);
-        .mat-icon {
-            color: rgb(52, 109, 219);
-        }
-        span {
-            color: white;
-        }
-    }
-    .NgxEditor {
-        min-height: 40px;
-        max-height: 190px;
-        max-width: 800px;
-        background-color: rgb(24 28 31) !important;
-        border: 1px solid #374151 !important;
-
-        &__MenuBar {
-            background-color: rgb(24 28 31) !important;
-            border: 1px solid #374151;
-            color: rgb(162, 169, 185);
-        }
-        &__Content {
-            line-height: 18px;
-            font-weight: 400;
-            font-size: 16px;
-            font-family: "Open Sans", sans-serif;
-            color: rgb(162, 169, 185);
-            border-radius: 4px;
-            border-width: 1px;
-        }
-        &__Seperator {
-            border-left: 1px solid #374151 !important;
-        }
-        &__MenuBar {
-            overflow: auto;
-        }
-        &__MenuItem {
-            &--IconContainer {
-                &:hover {
-                    svg {
-                        fill: rgb(20, 24, 32);
-                    }
-                }
-            }
-            svg {
-                fill: rgb(162, 169, 185);
-            }
-        }
-        &__Popup {
-            background-color: rgb(45, 50, 58) !important;
-        }
-        &__Dropdown {
-            background-color: inherit !important;
-            &--Active {
-                background-color: rgb(24 28 31) !important;
-                border: 1px solid rgb(43, 46, 57);
-                color: rgb(52, 109, 219) !important;
-            }
-        }
-        &__Dropdown--Item {
-            background-color: rgb(24 28 31);
-            &:hover {
-                background-color: rgb(45, 50, 58) !important;
-                border: 1px solid rgb(52, 109, 219);
-            }
-        }
-        overflow-y: auto;
-    }
 }
 
 
