added functionality to buttons on main page

--- a/src/app/components/add-category/add-category.component.scss
+++ b/src/app/components/add-category/add-category.component.scss
@@ -21,7 +21,7 @@ h2 {
   //padding-top: 48px;
   display: flex;
   //height: 100% - 14.1%;
-  height: calc(100% - 84px);
+  //height: calc(100% - 84px);
 }
 
 .input_sort_category {
