--- a/src/app/components/add-category/add-category.component.html
+++ b/src/app/components/add-category/add-category.component.html
@@ -5,7 +5,7 @@
            type="search"
            placeholder="Search category"
            [(ngModel)]="sortMenu">
-    <app-category-list *ngFor="let cat of allCategory  | search:sortMenu " [category]=cat></app-category-list>
+    <app-category-list *ngFor="let cat of allCategory  | search:sortMenu" [category]=cat></app-category-list>
   </div>
   <div class="main_form_div">
     <form [formGroup]="form">
@@ -14,6 +14,9 @@
                         style="margin-bottom: 20px">
           <mat-label>Enter category</mat-label>
           <input matInput #inputCategory [placeholder]="'category'" formControlName="category">
+<!--          <ng-container *ngIf="!(inputCategory.value[0] === inputCategory.value[0].toUpperCase())">-->
+<!--            <mat-hint> should start with upper case</mat-hint>-->
+<!--          </ng-container>-->
           <mat-hint align="end">{{inputCategory.value?.length || 0}}/20</mat-hint>
         </mat-form-field>
 
