--- a/src/app/components/post/post-form-dialog/post-form-dialog.component.html
+++ b/src/app/components/post/post-form-dialog/post-form-dialog.component.html
@@ -21,7 +21,7 @@
     <div class="content">
       <div class="NgxEditor__Wrapper">
         <div class="mat-menu-container">
-          <ngx-editor-menu [editor]="editor" [toolbar]="toolbar2"> </ngx-editor-menu>
+          <ngx-editor-menu [editor]="editor" [toolbar]="toolbar"> </ngx-editor-menu>
         </div>
         <ngx-editor [editor]="editor" [(ngModel)]="post.content" [disabled]="false" outputFormat="html">
         </ngx-editor>
