--- a/src/app/components/post/views/post-view-main/post-view.component.html
+++ b/src/app/components/post/views/post-view-main/post-view.component.html
@@ -1,9 +1,14 @@
 <div class="container">
-  <div class="post">
+  <div *ngIf="post !== undefined && user !== undefined" class="post">
     <h1 class="title">{{post.title}}</h1>
     <div class="subtitle">
-      <span class="category">Category: {{post.category}}</span>
+      <div class="author-icon"><span>{{user.firstName[0]}}</span></div>
+      <span class="author-name">{{user.firstName}} {{user.lastName}}</span>
+      <span class="data-creation">{{post.dateCreation | timeAgo}}</span>
+      <span class="reading-time">{{post.content|readingTime}}</span>
+      <span class="category"> Category: {{post.category}}</span>
     </div>
+    <!-- <mat-divider class="mat-divider"></mat-divider> -->
     <div class="content" [innerHTML]="post.content | sanitizeHtml"></div>
   </div>
 </div>
