--- a/src/assets/fonts/fonts.css
+++ b/src/assets/fonts/fonts.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arimo:wght@700&family=Open+Sans:wght@400;500;600;700&family=Tinos&display=swap');
 
 
 @font-face {
