--- a/src/app/components/login/login-form/login-form.component.html
+++ b/src/app/components/login/login-form/login-form.component.html
@@ -36,7 +36,7 @@
 
             <mat-error *ngIf="isError">{{errorMessage}}</mat-error>
 
-            <button class="form__btn" mat-button (click)="logIn()" [disabled]="loginGroup.invalid"
+            <button class="form__btn" mat-button (click)="logIn()" [disabled]="loginGroup.invalid || isFetching"
                 type="submit">LOGIN</button>
 
 
